# datarSCRIPT

./: .gitignore  AGENTS.md  LICENSE  README.md  RELEASE_NOTES.md  datarSCRIPT.md  datarscript.py  install.py  pyproject.toml  test_for_loop.dtsc  test_key_clear.dtsc  test_key_read.dtsc  test_loop.dtsc  test_pipe_clear.dtsc  test_socket_server.py
src/datarscript/: __init__.py  ast.py  errors.py  interpreter.py  lexer.py  parser.py
src/datarscript/builtins/: __init__.py  base.py  files.py  filesystem.py  graphics.py  http.py  http_json.py  math_stdlib.py  system.py  terminal.py
src/datarscript/graphics/: context.py
tests/: 01_hello_world.dtsc  02_variables_arithmetic.dtsc  03_strings.dtsc  04_booleans.dtsc  05_if_else.dtsc  06_while_loops.dtsc  07_for_loops.dtsc  08_functions.dtsc  09_lists.dtsc  10_dictionaries.dtsc  11_break_continue.dtsc  12_error_handling.dtsc  13_fizzbuzz.dtsc  14_factorial.dtsc  15_fibonacci.dtsc  16_user_input.dtsc  17_trim.dtsc  18_comprehensive.dtsc  19_random.dtsc  snake_game.dtsc  test_blocking_input.dtsc  test_key_clear.dtsc  test_key_debug.dtsc  test_key_read.dtsc  test_loop.dtsc  test_nonblocking_input.dtsc  test_tuples.dtsc  test_wait.dtsc
