[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DatarScript"
dynamic = ["version"]
description = "A natural language programming language that uses English syntax"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
    { name = "ForgedInFiles", email = "forged-in-files@outlook.com" },
]
maintainers = [
    { name = "ForgedInFiles", email = "forged-in-files@outlook.com" },
]
keywords = ["programming-language", "interpreter", "natural-language", "english", "datarscript"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Interpreters",
]

[project.urls]
Homepage = "https://github.com/ForgedInFiles/datarSCRIPT"
Repository = "https://github.com/ForgedInFiles/datarSCRIPT"
Issues = "https://github.com/ForgedInFiles/datarSCRIPT/issues"

[project.scripts]
datarscript = "datarscript:main"
dtsc = "datarscript:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {file = "src/datarscript/__init__.py"}

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py38"